--- a/common/pay-info/payboard.handlebars
+++ b/common/pay-info/payboard.handlebars
@@ -1,9 +1,9 @@
 {{#*inline "earnings-row"}}
     <tr class="pay-info-row">
         <td class="pay-info-study-activity">{{this.day}}</td>
-        <td>${{#if this.session1Earned}}{{this.session1Earned}}{{else}}0{{/if}}</td>
-        <td>${{#if this.session2Earned}}{{this.session2Earned}}{{else}}0{{/if}}</td>
-        <td>${{#if this.streakBonus}}{{this.streakBonus}}{{else}}0{{/if}}</td>
+        <td>${{#if this.visits}}{{this.visits}}{{else}}0{{/if}}</td>
+        <td>${{#if this.sessions}}{{this.sessions}}{{else}}0{{/if}}</td>
+        <td>${{#if this.bonuses}}{{this.bonuses}}{{else}}0{{/if}}</td>
         <td>${{this.total}}</td>
     </tr>
 {{/inline}}
@@ -11,10 +11,10 @@
 <table>
     <thead>
         <tr>
-            <th>Day</th>
-            <th>Session 1</th>
-            <th>Session 2</th>
-            <th>Streak Bonus (if consecutive)</th>
+            <th>Date</th>
+            <th>Lab Visits</th>
+            <th>Breathing Sessions</th>
+            <th>Bonuses</th>
             <th>Total</th>
         </tr>
     </thead>
