Adds rcid to reg form.
Removes notification prefs.

--- a/site/register/index.ejs
+++ b/site/register/index.ejs
@@ -10,6 +10,7 @@
         <div id="registration-form" class="hidden">
             <p class="header">Thanks for participating in the breathing study! Let's get you set up with an account:</p>
             <form novalidate>
+                <input type="hidden" name="rcid" id="rcid" value=""/>
                 <label for="name">Name:</label>
                 <input type="text" name="name" id="name" value="" disabled/> <br/>
                 <label for="email">Email:</label>
