Gets dashboard working

--- a/site/admin/dashboard/index.ejs
+++ b/site/admin/dashboard/index.ejs
@@ -15,11 +15,7 @@
             <thead>
                 <tr>
                     <th>Participant</th>
-                    <th>Participant ID</th>
-                    <th>Stage 2 Start Date</th>
-                    <th>Stage 2 Status</th>
-                    <th>Stage 3 Status</th>
-                    <th>Dropped</th>
+                    <th>Status</th>
                 </tr>
             </thead>
             <tbody>
