--- a/site/admin/dashboard/templates/userDetails.handlebars
+++ b/site/admin/dashboard/templates/userDetails.handlebars
@@ -3,6 +3,9 @@
     <div>{{user.email}}</div>
     <div>{{user.phone}}</div>
     <div>{{user.userId}}</div>
+    <div>Total sessions completed {{user.dateRange}}: {{user.status.recentSessionCount}}</div>
+    <div>Most recent session completed: {{user.status.latestCompleteSession}}</div>
+    <div id=""></div>
     <div id="pay-info"></div>
     <div id="pay-errors"></div>
 </div>
